Correção de Cors + remoção de workflow + README